<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.techredesign.uxfortips.settings">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/setTaxbtn"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/taxInput"
        android:onClick="setTax"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/taxInput"
        android:hint="@string/localTaxPrompt"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/defaultTipValueWidgetET"
        android:hint="@string/preferedTip"
        android:layout_below="@+id/setTaxbtn"
        android:layout_alignParentStart="true"
        android:onClick="setDefaultTip"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/setDefaultTipValue"
        android:onClick="setTax"
        android:layout_below="@+id/setTaxbtn"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/setTaxbtn" />
</RelativeLayout>
